chore: small fixes

--- a/src/app/shared/components/main-content/main-content.component.css
+++ b/src/app/shared/components/main-content/main-content.component.css
@@ -1,10 +1,11 @@
 .main__wrapper {
   width: 100%;
+  max-width: 960px;
   height: 100%;
 }
 .main__items-container {
   display: grid;
-  grid-template-columns: repeat(3, 280px);
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   grid-gap: 24px;
 }
 
