--- a/src/app/shared/components/main-content/main-content.component.html
+++ b/src/app/shared/components/main-content/main-content.component.html
@@ -1,5 +1,5 @@
 <div class="main__wrapper">
-  <div class="main__items-container">
+  <div class="main__items-container" #main>
     <ng-container *ngFor="let item of data.results; trackBy: trackById" [ngSwitch]="data.cardType">
       <app-card-game *ngSwitchCase="'game'" [game]="item"></app-card-game>
       <app-card-dev *ngSwitchCase="'dev'" [dev]="item"></app-card-dev>
