--- a/src/app/features/game-details/components/slider/slider.component.css
+++ b/src/app/features/game-details/components/slider/slider.component.css
@@ -10,7 +10,7 @@
   flex-direction: column;
 }
 .slider__slides-wrapper {
-  max-width: 740px;
+  max-width: 60%;
   position: relative;
   flex-grow: 1;
   flex-shrink: 0;
@@ -25,7 +25,8 @@
   width: 50px;
   height: 50px;
   position: absolute;
-  top: 40%;
+  top: 50%;
+  transform: translateY(-50%);
   z-index: 30;
   display: flex;
   align-items: center;
@@ -52,6 +53,7 @@
 }
 .slider__slides {
   width: 100%;
+  height: 100%;
   max-height: 400px;
   display: flex;
   list-style: none;
@@ -66,7 +68,6 @@
   flex-basis: 100%;
   flex-shrink: 0;
   height: 100%;
-  border-radius: 20px;
 }
 .slider__slide-img {
   display: block;
@@ -74,7 +75,6 @@
   width: 100%;
   object-fit: cover;
   object-position: center;
-  border-radius: 20px;
 }
 .slider__thumbnails-wrapper {
   width: 100%;
