--- a/src/app/features/game-details/components/slider/slider.component.html
+++ b/src/app/features/game-details/components/slider/slider.component.html
@@ -11,14 +11,14 @@
     >
       <svg width="12px" height="12px" viewBox="0 0 12 12" enable-background="new 0 0 12 12" id="Слой_1" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><polygon fill="#1D1D1B" points="8.1464844,12 2.1464844,6 8.1464844,0 8.8535156,0.7070313 3.5605469,6 8.8535156,11.2929688 "/></svg>
     </button>
-    <div class="slider__slides" #slides>
-      <figure class="slider__slide"
+    <ul class="slider__slides" #slides>
+      <li class="slider__slide"
           data-active *ngFor="let screenshot of screenshots; let index = index"
           [ngClass]="{'slider__slide_active': activeSlideIndex === index}"
       >
         <img class="slider__slide-img" [src]="screenshot.image" alt="full size game image">
-      </figure>
-    </div>
+      </li>
+    </ul>
   </div>
   <div class="slider__thumbnails-wrapper">
     <ul class="slider__thumbnails">
