--- a/src/app/features/game-details/components/slider/slider.component.scss
+++ b/src/app/features/game-details/components/slider/slider.component.scss
@@ -12,7 +12,7 @@
   }
 
   &__slides-wrapper {
-    max-width: 740px;
+    max-width: 60%;
     position: relative;
     flex-grow: 1;
     flex-shrink: 0;
@@ -28,7 +28,8 @@
     width: 50px;
     height: 50px;
     position: absolute;
-    top: 40%;
+    top: 50%;
+    transform: translateY(-50%);
     z-index: 30;
     display: flex;
     align-items: center;
@@ -61,6 +62,7 @@
 
   &__slides {
     width: 100%;
+    height: 100%;
     max-height: 400px;
     display: flex;
     list-style: none;
@@ -76,7 +78,6 @@
     flex-basis: 100%;
     flex-shrink: 0;
     height: 100%;
-    border-radius: 20px;
   }
 
   &__slide-img {
@@ -85,7 +86,6 @@
     width: 100%;
     object-fit: cover;
     object-position: center;
-    border-radius: 20px;
   }
 
   &__thumbnails-wrapper {
