--- a/src/app/features/game-details/pages/trailers/trailers.component.scss
+++ b/src/app/features/game-details/pages/trailers/trailers.component.scss
@@ -2,7 +2,8 @@
 
 .trailers {
   &__wrapper {
-    margin-top: 40px;
+    margin: 40px 0;
+    gap: 40px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -11,10 +12,9 @@
   }
 
   &__item {
-    width: 600px;
-    height: 400px;
+    max-width: 600px;
+    max-height: 400px;
     border-radius: 10px;
-    margin-bottom: 50px;
     position: relative;
 
     & video {
