--- a/src/app/features/game-details/game-details.component.css
+++ b/src/app/features/game-details/game-details.component.css
@@ -30,7 +30,13 @@
   padding: 40px;
 }
 .details__header {
-  max-width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.details__header-wrapper {
+  width: 100%;
+  max-width: 55%;
 }
 .details__header-meta {
   display: flex;
@@ -59,15 +65,6 @@
   font-size: 64px;
   line-height: 77px;
   position: relative;
-}
-.details__title::after {
-  content: "";
-  width: 100%;
-  height: 5px;
-  background-color: var(--black);
-  position: absolute;
-  bottom: -8px;
-  left: 0;
 }
 .details__platforms {
   display: flex;
