--- a/src/app/features/game-details/game-details.component.html
+++ b/src/app/features/game-details/game-details.component.html
@@ -4,22 +4,22 @@
   </div>
   <div class="details__content">
     <header class="details__header">
-      <div class="details__header-meta">
-        <div class="details__header-release-date">{{gameDetails.released | date}}</div>
-        <div class="details__header-platforms">
-          <ul class="details__platforms">
-            <li class="details__platform" *ngFor="let platform of gameDetails.parent_platforms ">
-              {{platform.platform.name}}
-            </li>
-          </ul>
+      <div class="details__header-wrapper">
+        <div class="details__header-meta">
+          <div class="details__header-release-date">{{gameDetails.released | date}}</div>
+          <div class="details__header-platforms">
+            <ul class="details__platforms">
+              <li class="details__platform" *ngFor="let platform of gameDetails.parent_platforms ">
+                {{platform.platform.name}}
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="details__title-wrapper">
+          <h2 class="details__title">{{gameDetails.name}}</h2>
         </div>
       </div>
-      <div class="details__title-wrapper">
-        <h2 class="details__title">{{gameDetails.name}}</h2>
-      </div>
-      <!--    <div class="details__rating-diagram">-->
-      <!--      <div class="details__stat"></div>-->
-      <!--    </div>-->
+      <app-pie-chart [ratings]="gameDetails.ratings"></app-pie-chart>
     </header>
     <app-tabs [id]="gameId"></app-tabs>
   </div>
