--- a/src/app/features/game-details/game-details.component.scss
+++ b/src/app/features/game-details/game-details.component.scss
@@ -39,7 +39,14 @@
   }
 
   &__header {
-    max-width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__header-wrapper {
+    width: 100%;
+    max-width: 55%;
   }
 
   &__header-meta {
@@ -71,15 +78,15 @@
     @include mixins.main-title;
     position: relative;
 
-    &::after {
-      content: '';
-      width: 100%;
-      height: 5px;
-      background-color: var(--black);
-      position: absolute;
-      bottom: -8px;
-      left: 0;
-    }
+    //&::after {
+    //  content: '';
+    //  width: 100%;
+    //  height: 5px;
+    //  background-color: var(--black);
+    //  position: absolute;
+    //  bottom: -8px;
+    //  left: 0;
+    //}
   }
 
   &__platforms {
