--- a/src/app/features/game-details/components/slider/slider.component.scss
+++ b/src/app/features/game-details/components/slider/slider.component.scss
@@ -9,9 +9,17 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
   }
 
   &__slides-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__slides-container {
     max-width: 60%;
     position: relative;
     flex-grow: 1;
@@ -66,7 +74,6 @@
     max-height: 400px;
     display: flex;
     list-style: none;
-    align-items: center;
     justify-content: flex-start;
     transition: .3s ease-in-out;
   }
