--- a/src/app/features/game-details/components/slider/slider.component.css
+++ b/src/app/features/game-details/components/slider/slider.component.css
@@ -15,15 +15,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-grow: 1;
 }
 .slider__slides-container {
-  max-width: 60%;
+  max-width: 80%;
   position: relative;
   flex-grow: 1;
   flex-shrink: 0;
   flex-basis: auto;
   margin: 80px auto 0;
   overflow-x: hidden;
+  border-radius: 10px;
 }
 .slider__prev-btn, .slider__next-btn {
   border: none;
@@ -61,7 +63,7 @@
 .slider__slides {
   width: 100%;
   height: 100%;
-  max-height: 400px;
+  max-height: 500px;
   display: flex;
   list-style: none;
   justify-content: flex-start;
