--- a/src/app/features/game-details/components/slider/slider.component.scss
+++ b/src/app/features/game-details/components/slider/slider.component.scss
@@ -17,16 +17,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-grow: 1;
   }
 
   &__slides-container {
-    max-width: 60%;
+    max-width: 80%;
     position: relative;
     flex-grow: 1;
     flex-shrink: 0;
     flex-basis: auto;
     margin: 80px auto 0;
     overflow-x: hidden;
+    border-radius: 10px;
   }
 
   &__prev-btn, &__next-btn {
@@ -71,7 +73,7 @@
   &__slides {
     width: 100%;
     height: 100%;
-    max-height: 400px;
+    max-height: 500px;
     display: flex;
     list-style: none;
     justify-content: flex-start;
