--- a/src/app/features/game-details/pages/about/about.component.scss
+++ b/src/app/features/game-details/pages/about/about.component.scss
@@ -1,16 +1,16 @@
 @use '../../../../../styles/mixins';
 
-._metadata {
+._data {
   font-size: 16px;
   line-height: 22px;
 }
 
-._metadata_wide {
+._data_wide {
   width: 100%;
   grid-column: 1 / -1;
 }
 
-._metadata-list {
+._data-list {
   list-style: none;
   display: flex;
   align-items: center;
@@ -18,7 +18,7 @@
   gap: 5px;
 }
 
-._meta-title {
+._data-title {
   font-size: 14px;
   color: var(--grey);
   margin-bottom: 8px;
@@ -61,8 +61,8 @@
   }
 }
 
-.meta {
-  &__metadata {
+.info {
+  &__wrapper {
     display: grid;
     grid-template-columns: repeat(2, minmax(250px, 1fr));
     gap: 20px;
