--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,7 @@
 :root {
   --primary: #F6F5F5;
   --black: #000000;
+  --secondary: var(--black);
   --orange: #E89924;
   --grey: #878787;
   --top-border-radius: 20px 20px 0 0;
