--- a/src/app/features/game-details/components/slider/slider.component.css
+++ b/src/app/features/game-details/components/slider/slider.component.css
@@ -18,7 +18,7 @@
   flex-grow: 1;
 }
 .slider__slides-container {
-  max-width: 80%;
+  max-width: 1200px;
   position: relative;
   flex-grow: 1;
   flex-shrink: 0;
@@ -63,7 +63,7 @@
 .slider__slides {
   width: 100%;
   height: 100%;
-  max-height: 500px;
+  max-height: 700px;
   display: flex;
   list-style: none;
   justify-content: flex-start;
