--- a/src/app/features/game-details/components/slider/slider.component.scss
+++ b/src/app/features/game-details/components/slider/slider.component.scss
@@ -21,7 +21,7 @@
   }
 
   &__slides-container {
-    max-width: 80%;
+    max-width: 1200px;
     position: relative;
     flex-grow: 1;
     flex-shrink: 0;
@@ -73,7 +73,7 @@
   &__slides {
     width: 100%;
     height: 100%;
-    max-height: 500px;
+    max-height: 700px;
     display: flex;
     list-style: none;
     justify-content: flex-start;
